--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "firebase": "^10.14.1",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
