--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/swiper": "^6.0.0",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "prettier": "^3.3.3",
@@ -20,7 +21,8 @@
     "react-multi-carousel": "^2.8.5",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
-    "react-use": "^17.5.1"
+    "react-use": "^17.5.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
